# kuber

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  README.md  casting.py  conf.py  contents.rst  index.rst  manager.py  pyproject.toml  requirements.txt  setup.py
docs/: cli.rst  creating_definitions.rst  crud.rst  custom_objects.rst  overview.rst  package.rst  resource_access.rst  versions.rst
docs/examples/: bundle-with-cli.rst  config-map.rst  from-helm-chart.rst  simple-hybrid-configuration.rst
docs/modules/: kuber.cli.rst  kuber.definitions.rst  kuber.interface.rst  kuber.latest.apiextensions_apiserver.pkg.apis.rst  kuber.latest.apiextensions_apiserver.pkg.rst  kuber.latest.apiextensions_apiserver.rst  kuber.latest.apimachinery.pkg.apis.rst  kuber.latest.apimachinery.pkg.rst  kuber.latest.apimachinery.rst  kuber.latest.kube_aggregator.pkg.apis.rst  kuber.latest.kube_aggregator.pkg.rst  kuber.latest.kube_aggregator.rst  kuber.latest.rst  kuber.management.rst  kuber.pre.apiextensions_apiserver.pkg.apis.rst  kuber.pre.apiextensions_apiserver.pkg.rst  kuber.pre.apiextensions_apiserver.rst  kuber.pre.apimachinery.pkg.apis.rst  kuber.pre.apimachinery.pkg.rst  kuber.pre.apimachinery.rst  kuber.pre.kube_aggregator.pkg.apis.rst  kuber.pre.kube_aggregator.pkg.rst  kuber.pre.kube_aggregator.rst  kuber.pre.kubernetes.pkg.apis.rst  kuber.pre.kubernetes.pkg.rst  kuber.pre.kubernetes.rst  kuber.pre.rst  kuber.rst  kuber.tests.arrays.rst  kuber.tests.interface.rst  kuber.tests.kube_api.rst  kuber.tests.management.rst  kuber.tests.rst  kuber.tests.scenarios.cron_suspend.rst  kuber.tests.scenarios.custom_object.rst  kuber.tests.scenarios.custom_resource_definition.rst  kuber.tests.scenarios.empty_values.rst  kuber.tests.scenarios.get_containers_from_job.rst  kuber.tests.scenarios.metadata_owner_reference.rst  kuber.tests.scenarios.odd_api_versions.rst  (+80 more)
examples/bundle-with-cli/: bundle-with-cli.py  resources.yaml
examples/config-map/: config-map.py  data.json
examples/from_helm_chart/: from-helm-chart.py
examples/hybrid-configuration/: hybrid-configuration.py  my-deployment.yaml
examples/simple-hybrid-configuration/: simple-hybrid-configuration.py
kuber/: __init__.py  _types.py  cli.py  definitions.py  execution.py  helm_management.py  kube_api.py  management.py  versioning.py
kuber/cli/: __init__.py
kuber/definitions/: __init__.py  _abstracts.py  _support.py  _types.py
kuber/interface/: __init__.py  _parsing.py
kuber/latest/: __init__.py  admissionregistration_v1.py  admissionregistration_v1alpha1.py  admissionregistration_v1beta1.py  apiextensions_v1.py  apiextensions_v1beta1.py  apimachinery_runtime.py  apimachinery_version.py  apiregistration_v1.py  apiregistration_v1beta1.py  apiserverinternal_v1alpha1.py  apps_v1.py  apps_v1beta1.py  apps_v1beta2.py  auditregistration_v1alpha1.py  authentication_v1.py  authentication_v1alpha1.py  authentication_v1beta1.py  authorization_v1.py  authorization_v1beta1.py  autoscaling_v1.py  autoscaling_v2.py  autoscaling_v2beta1.py  autoscaling_v2beta2.py  batch_v1.py  batch_v1beta1.py  batch_v2alpha1.py  certificates_v1.py  certificates_v1alpha1.py  certificates_v1beta1.py  coordination_v1.py  coordination_v1alpha2.py  coordination_v1beta1.py  core_v1.py  (+37 more)
kuber_maker/: __init__.py  custom_object_definition.json  documenting.py  initializer.py  main.py  packaging.py  parsing.py  render.py  updater.py  utils.py
samples/: bundle.yaml  deployment.yaml  job.yaml  rbac.yaml
sandbox/: bundling.py  integration.py  main.py  playground.py  sandbox.py  yaml-bundle.py
specs/: v1.11.json  v1.28.json  v1.29.json  v1.30.json  v1.31.json  v1.32.json  v1.33.json  v1.34.json
(+1338 files in other folders)
